--- a/Shop/css/style.css
+++ b/Shop/css/style.css
@@ -358,3 +358,37 @@ a {
 .social__icons {
     padding: 24px 0;
 }
+
+.breadcrumb {
+    background: #F8F3F4;
+}
+
+.breadcrumb__wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.breadcrumb strong {
+    line-height: 29px;
+    color: #F16D7F;
+    font-size: 24px;
+    font-weight: 400;
+}
+
+.breadcrumb__left {
+    padding: 60px 0;
+}
+
+.breadcrumb__right {
+    font-weight: 300;
+    line-height: 17px;
+    font-size: 14px;
+    color: #636363
+    
+}
+
+.breadcrumb__right:hover {
+    font-weight: 700;
+    color: #F16D7F;
+}
