--- a/Shop/sass/block/_var.scss
+++ b/Shop/sass/block/_var.scss
@@ -1,4 +1,9 @@
 $maincolor: #F16D7F;
 
-
+@mixin loyalty {
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 29px;
+    color: #000000;
+}
 
