--- a/Shop/css/style.css
+++ b/Shop/css/style.css
@@ -179,6 +179,44 @@ a {
     margin-bottom: 30px;
 }
 
+.catalog__items__card__img {
+    position: relative;
+}
+
+.catalog__items__card:hover .card__overlay {
+    opacity: 1;
+}
+
+.card__overlay {
+    background: rgba(58, 56, 56, 0.86);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: 0.3s;
+}
+
+.card__add {
+    padding: 10px 15px;
+    font-size: 14px;
+    line-height: 17px;
+    font-weight: 400;
+    color: #FFFFFF;
+    border: 1px solid #FFFFFF;
+    background: none;
+    display: flex;
+    align-items: center;
+}
+
+.card__add svg {
+    margin-right: 11px;
+}
+
 .catalog__items__card__text {
     background: #F8F8F8;
 }
@@ -545,6 +583,51 @@ label {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+}
+
+.pagination {
+    max-width: 290px;
+    padding: 15px 16px;
+    border: 1px solid #EBEBEB;
+    margin-top: 18px;
+    margin-bottom: 96px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+}
+
+.pagination button {
+    background: #fff;
+    border: none;
+}
+
+.pagination p {
+    padding-right: 18px;
+    padding-left: 18px;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 19px;
+    color: #C4C4C4;
+}
+
+.pagination p span {
+    display: inline-flex;
+    padding-right: 17px;
+    box-sizing: border-box;
+    
+}
+
+.pagination p span:first-child {
+    padding-left: 0;
+}
+
+.pagination p span:nth-child(6) {
+    padding-right: 0;
+}
+
+.pagination p span:nth-child(1n+7) {
+    padding: 0;
 }
 
 .slider {
