--- a/Shop/sass/block/_card.scss
+++ b/Shop/sass/block/_card.scss
@@ -2,12 +2,12 @@
 .card {
     margin-bottom: 40px;
     display: flex;
-    width: 652px;
+    width: 100%;
     height: 306px;
     filter: drop-shadow(17px 19px 24px rgba(0, 0, 0, 0.13));
 
     .card__side {
-        width: 100%;
+        width: 66%;
         background: #FFFFFF;
         display: flex;
         align-items: flex-start;
@@ -17,7 +17,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            padding-right: 57px;
+            padding-right: 5%;
             h2 {
                 font-weight: 400;
                 font-size: 24px;
