--- a/Shop/sass/mainstyle.css
+++ b/Shop/sass/mainstyle.css
@@ -3,14 +3,14 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 652px;
+  width: 100%;
   height: 306px;
   -webkit-filter: drop-shadow(17px 19px 24px rgba(0, 0, 0, 0.13));
           filter: drop-shadow(17px 19px 24px rgba(0, 0, 0, 0.13));
 }
 
 .card .card__side {
-  width: 100%;
+  width: 66%;
   background: #FFFFFF;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -35,7 +35,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding-right: 57px;
+  padding-right: 5%;
 }
 
 .card .card__side .card__text h2 {
@@ -78,20 +78,141 @@
   .header {
     padding: 0 32px;
   }
+  .nav {
+    height: 100%;
+    overflow: scroll;
+  }
   .intro__wrap {
-    background-size: cover;
-    background-position: center center;
+    background-size: contain;
+    background-position: -216px bottom;
   }
   .intro__text {
+    font-weight: 400;
+    font-size: 23px;
+    line-height: 28px;
+  }
+  .bolt {
     font-weight: 900;
-    font-size: 44px;
+    font-size: 52px;
     line-height: 53px;
+  }
+  .categories {
+    margin: 0 16px;
+    margin-bottom: 14%;
+  }
+  .fetured__p {
+    margin-bottom: calc(4% * 2);
+  }
+  .catalog__items__card:nth-child(odd) {
+    margin-right: 2%;
+  }
+  .button {
+    margin-top: calc(4% * 0.8);
+    margin-bottom: calc(8% * 0.8);
+  }
+  .feature__wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .feature__items:first-child {
+    padding-top: 48px;
+    padding-bottom: 0;
+  }
+  .feature__items:nth-child(2) {
+    padding: 48px 0;
+  }
+  .feature__items:last-child {
+    padding-top: 0;
+    padding-bottom: 48px;
+  }
+  .frame__wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .frame__left {
+    padding-top: 64px;
+    margin-bottom: 48px;
+  }
+  .frame__right {
+    padding: 0 0 140px;
+  }
+  .footer__wrap {
+    padding: 0 32px;
+  }
+  .breadcrumb__wrap {
+    padding: 0 16px;
+  }
+  .filter__sort__wrap {
+    padding: 24px 16px 40px;
+  }
+  .products__wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .product__wrap {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .product__wrap article:last-child {
+    display: none;
+  }
+  .cart .side {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: 0 16px;
+  }
+  .cart .side .side__right {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+@media (max-width: 1100px) {
+  .products__wrap {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .catalog__items__card:nth-child(odd) {
+    margin-right: 2%;
+  }
+  .intro__wrap {
+    background-size: contain;
+    background-position: -205px bottom;
   }
 }
 
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .cart .side {
@@ -104,9 +225,7 @@
 }
 
 .cart .side .side__left .under__btn {
-  margin-top: 72px;
-  margin-bottom: 128px;
-  width: 652px;
+  margin: 72px 0 128px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -123,10 +242,6 @@
   font-size: 14px;
   line-height: 17px;
   color: #000000;
-}
-
-.cart .side .side__right {
-  width: 360px;
 }
 
 .cart .side .side__right .ship {
@@ -173,6 +288,7 @@
 }
 
 .cart .side .side__right .checkout {
+  height: 214px;
   padding: 39px 43px 0;
   display: -webkit-box;
   display: -ms-flexbox;
