--- a/Shop/sass/mainstyle.scss
+++ b/Shop/sass/mainstyle.scss
@@ -4,17 +4,16 @@
 * {
      margin: 0;
      padding: 0;
+     box-sizing: border-box;
  }
 .cart {
     .side {
         display: flex;
         justify-content: space-between;
-    
+        
         .side__left {
             .under__btn {
-                margin-top: 72px;
-                margin-bottom: 128px;
-                width: 652px;
+                margin: 72px 0 128px;
                 display: flex;
                 justify-content: space-between;
                 button {
@@ -30,8 +29,8 @@
         }
         
         .side__right {
-            width: 360px;
             .ship {
+                
                 margin-top: 113px;
                 margin-bottom: 51px;            
                 display: flex;
@@ -66,6 +65,8 @@
                 }       
             }
             .checkout {
+                
+                height: 214px;
                 padding: 39px 43px 0;
                 display: flex;            
                 flex-direction: column;          
